# xai

./: .env.template  .gitignore  CLAUDE.md  CONDA_SETUP.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_STOCK_ANALYSIS.md  README.md  README_API.md  UV_COMPLETE_GUIDE.md  UV_GUIDE.md  main.py  pyproject.toml  requirements.txt  run_aliChat.sh  run_aliChatStream.sh  start.sh  test_analysis.py  test_api_client.py
.claude/: ai.md  design.md  plan.md
.github/workflows/: pylint.yml
DeepL/hdbScan/: hdbScan1.py  hdbScan2.py  hdbScanTest.py  hdbscan_cluster_summary.xlsx  hdbscan_cluster_summary2.xlsx
ML/: meilage.py  meilages.py  ml.py
andy/: aiAgentStudy.md
andy/stock/: stock.md
app/: main.py  readMe.md
app/agents/: __init__.py  base.py  financial.py  investment.py  news.py  planner.py  report.py  risk.py
app/ai/: chat_service.py
app/controller/: user_controller.py
app/core/: ai_client.py  api_client.py  config.py  database.py  llm.py
app/model/: database_models.py
app/schemas/: __init__.py  agent.py  request.py
cnn/image/: imageF.py
docs/: API_KEY_MANAGEMENT.md  COMPLETION_REPORT.md  QUICKSTART_CONFIG.md  SECURITY_IMPROVEMENTS.md  chat.md
examples/: README.md  advanced_agent.py  rag_agent.py  simple_agent.py  simple_agent_demo.py
flask/: flaskTest.py
google/: gemini_Image_Test.py  gemini_Image_editing.py  gemini_Text_Test.py  readMe.md  streamingOutput.py  test.py
numpy001/: numpyTest.py
pyStudy/: DateUtils.py  business_service.py  date.txt  evTest.py  fileUtils.py  pyStudy.py  string.md
scripts/: security_check.py  verify_setup.py
static/: andyTest.sql
stock/: stockA.py
tensorFlow/: tensorFlowTest2.py
test/: csv2yaml_v1.py  input.py  inputTest.py  kkk.py  pythonX.py  srzp.py  sysInfo.py
transformer/: transformersTest.py
wechat/: ads.py
(+101 files in other folders)
