[project]
name = "xai"
version = "0.1.0"
description = "Professional AI Agent Development Project"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.100.0",
    "flask>=3.0.0",
    "uvicorn[standard]>=0.20.0",
    # AI/LLM 核心
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    # 向量存储和检索
    "chromadb>=0.4.0",
    # 机器学习
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # 工具
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # 代码质量
    "ruff>=0.1.0",
    "mypy>=1.5.0",

    # 测试
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",

    # Jupyter
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",

    # 调试
    "rich>=13.0.0",
]

extended = [
    # 扩展功能（可选）
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "pymilvus>=2.3.0",
    "pillow>=10.0.0",
    "selenium>=4.0.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "W191"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=app --cov-report=term-missing"
